feat: base site

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,8 @@
   "trailingComma": "all",
   "jsxBracketSameLine": true,
   "endOfLine": "auto",
-  "useTabs": false
+  "useTabs": false,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
