--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "chart.js": "^4.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^1.2.1",
+    "daisyui": "^2.49.0",
     "eslint-config-next": "^13.1.6",
     "next": "^13.1.6",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
